// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TestObject TestObject constructor 1`] = `
TestObject {
  "ctx": Object {
    "result": Object {
      "markFailure": [MockFunction],
    },
  },
  "failed": false,
  "fieldName": "unicycle",
  "isWarning": false,
  "statement": "I am Root.",
  "testFn": [MockFunction],
}
`;

exports[`TestObject testObject.fail Should set \`.faild\` to true 1`] = `
TestObject {
  "ctx": Object {
    "result": Object {
      "markFailure": [MockFunction] {
        "calls": Array [
          Array [
            Object {
              "fieldName": "unicycle",
              "isWarning": false,
              "statement": "I am Root.",
            },
          ],
        ],
        "results": Array [
          Object {
            "type": "return",
            "value": undefined,
          },
        ],
      },
    },
  },
  "failed": true,
  "fieldName": "unicycle",
  "isWarning": false,
  "statement": "I am Root.",
  "testFn": [MockFunction],
}
`;

exports[`TestObject testObject.warn Should set \`.isWarning\` to true 1`] = `
TestObject {
  "ctx": Object {
    "result": Object {
      "markFailure": [MockFunction],
    },
  },
  "failed": false,
  "fieldName": "unicycle",
  "isWarning": true,
  "statement": "I am Root.",
  "testFn": [MockFunction],
}
`;
